# swipl-devel

./: CMAKE.md  CMakeLists.txt
cmake/: Config.cmake  Darwin.cmake  QLF.cmake  TestGNUQsortR.cmake  Utils.cmake  Version.cmake  Windows.cmake  WindowsTargets.cmake
cmake/cross/: linux_win64.cmake
man/: CMakeLists.txt  libtotex.pl  runtex
src/: CMakeLists.txt  config.h.cmake  config.h.in  configure.ac  defatom.c  parms.h.cmake  pl-hash.c  pl-init.c  test.pl
src/cmake/: AlignOf.cmake  Config.cmake  GCCBuiltins.cmake  Install.cmake  Params.cmake  Version.cmake
src/win32/console/: CMakeLists.txt
